crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__rename_onto_a_foreign_record_needs_confirmation.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        path: ^/api/
        service: "http://localhost:8080"
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: blog.xyz.com
        service: "http://localhost:5000"
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        path: ^/api/
        service: "http://localhost:8080"
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: yx.com
        service: "http://localhost:5000"
      - service: "http_status:404"
  - type: updateRecord
    zoneId: z-xyz
    recordId: f2
    hostname: blog.xyz.com
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    routeId: u5
    previous:
      id: f2
      name: blog.xyz.com
      type: A
      content: 198.51.100.7
      proxied: false
      comment: ~
      ttl: 1
  - type: deleteRecord
    zoneId: z-yx
    record:
      id: r-yx
      name: yx.com
      type: CNAME
      content: 6ff42ae2-765d-4adf-8112-31c55c1551ef.cfargotunnel.com
      proxied: true
      comment: ~
      ttl: 1
  - type: verify
    hostname: blog.xyz.com
warnings:
  - type: replacesForeignRecord
    hostname: blog.xyz.com
    kind: A
    content: 198.51.100.7
requiresConfirmation: true
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
